static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

body {
    font-family:'Bebas Neue', cursive;
}

/*------------beginning navbar----------*/

.navbar-custom {
    background: #111111;
    padding: 10px 30px;
    font-family: 'Bebas Neue', cursive;
    font-size: larger;
}

.nav-link {
    color: #ffffff;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 25px;
    letter-spacing: 3px;
}

.navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(10,117,87,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
  }
.navbar-toggler {
    border-color: rgba(10,117,87,1);
  } 
.nav-link:hover {
    color: #111111;
    background-color: #ffffff;
  }

/*------------end navbar----------*/

/*------------beginning footer----------*/
.footer-custom {
    background-color: #111111;
    font-family: 'Bebas Neue', cursive;
    padding: 7em 0;
}
.footer-custom .menu a {
    color: #ffffff;
    margin: 0 10px;
    text-transform: uppercase;
    letter-spacing: 1px;
}
.menu a:hover {
    color: #111111;
    background-color: #ffffff;
  }

.footer-custom li {
    list-style: none;
}
.footer-custom a {
    text-decoration: none;
    color: #f58902;
}
.social-links i:hover{
    color: #ffffff
}
.social-links p, .copyright {
    color:#ffffff;
}
/*------------end footer----------*/

/*------------HOME/INDEX TEMPLATE----------*/
/*------------beginning hero section----------*/
.carousel-caption {
    top: 50%;
    transform: translateY(-50%);
    bottom: initial;
    font-family: 'Bebas Neue', cursive;
}
.carousel-caption h1 {
    font-size: 5.5vw;
}
.carousel-caption h3 {
    font-size: 3vw;
}
.hero-btn {
    background-color: #0a7557;
    color:#ffffff;
}

.hero-btn:hover {
    color: #0a7557;
    background-color:#ffffff;
}
/*------------end hero section----------*/

/*------------ beginning informations section----------*/
.details-row {
    margin-top: 48px;
}
.details-img{
    text-align: center;
}
.address p{
    margin:0;
}
.address li {
    margin:0;
    list-style-type: none;
}
.address h2 {
    font-size: 3vw;
}
.address-btn {
    background-color: #0a7557;
    color:#ffffff;
    margin-top: 2vw;
}
.address-btn:hover {
    color: #0a7557;
    background-color:#ffffff;
}
.address h2,
.working-hours h5 {
    color: #0a7557
}
.working-hours {
    border-style: double;
    padding: 2vw;
    max-width: 300px;

}
.working-hours li {
    list-style-type: none;
    margin-top: 3px;
}
.working-hours u {
    text-align: center;
}
/*------------end informations section----------*/

/*------------ beginning about us section----------*/
.about-us-section p {
    font-family: 'Roboto', sans-serif;
}
.about-us-section h2 {
    font-size: 3vw;
}
/*------------end about us section----------*/

/*------------ beginning Explore menu section----------*/
.explore-menu-section h4 {
    color:#f58902;
}

.explore-menu-section span{
    color:#0062cc;
}

.explore-menu-section h2{
    font-size: 60px;
}
.card p{
    color:#ffffff;
    background-color: #111111;
    opacity: 0.8;
}
.card{
    width:400px;
    position: relative;
    margin: auto;
    overflow: hidden;
}
.card:hover img {
    transform: scale(1.1);
}
.card-title {
    margin-top: 5px;
}
.card-img-top {
   height: 267px;
   max-width:400px;
   transition: all 0.3s;
   transform: scale(1);
   opacity: 0.9;
}
.btn-explore-menu {
    background-color: #f58902;
    color:#111111;
    margin-top: 2vw;
    opacity: 0.85;
}
.btn-explore-menu:hover {
    color: #f58902;
    background-color:#111111;
}

/*------------ end Explore menu section----------*/


/* Beginning HERO SECTION used at Menu, Book and Contact Pages */
.hero-img {
    height:400px;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
  }
.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
  }
.hero-text h1 {
    font-size: 80px;
  }
/* End HERO SECTION used at Menu, Book and Contact Pages */

/*------------BEGINNING MENU PAGE----------*/
.hero-img-menu {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://res.cloudinary.com/arthurvg/image/upload/v1638996832/humberto-chavez-i6o8MQwyp34-unsplash_cwdhvn.jpg");
  }
.menu-section li {
    color:#0062cc;
}

.menu-section li:hover{
    background-color: #111111;
    color: #ffffff;
}
.li-black:hover{
    background-color: #f58902;
}
.item-price {
    color:#0062cc;
}

/*------------END MENU PAGE----------*/

.booking-h2 {
    font-size: 65px;
    color:#0062cc
}
/*------------BEGINNING BOOK PAGE----------*/
.hero-img-book {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://res.cloudinary.com/arthurvg/image/upload/v1639448859/mahmoud-fawzy-YnVaHqgpPLA-unsplash_rt2get.jpg");
  }

.booking-form input {
    border-radius: 4px;
    border: 1px solid grey;
    width: 300px;
    height: 35px;
}

.btn-booking {
    background-color: #0a7557;
    color:#ffffff;
    margin-top: 1vw;
    margin-left: 95px;
}
.btn-booking:hover {
    color: #0a7557;
    background-color:#ffffff;
}
/*------------END BOOK PAGE----------*/

/*------------BEGINNING SUCCESS BOOK PAGE----------*/
.booking-details {
    border-style: double;
    padding: 2vw;
    max-width: 400px;
}
.booking-details p{
    color:#0a7557
}
/*------------END SUCCESS BOOK PAGE----------*/

/*------------CANCEL CONFIRM PAGE----------*/
.btn-yes {
    background-color: #0a7557;
    color:#ffffff;
    width:80px;
}
.btn-no {
    background-color: #cc1a1a;
    color:#ffffff;
    width:80px;
}
/*------------END CANCEL CONFIRM PAGE----------*/
/*------------BEGINNING CONTACT PAGE----------*/
.hero-img-contact {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://res.cloudinary.com/arthurvg/image/upload/v1640113431/mahmoud-fawzy-sGPMqwj3N5M-unsplash_r9guqr.jpg");
  }
.contact-btn {
    background-color: #0a7557;
    color:#ffffff;
    margin-top: 2vw;
}
.contact-btn:hover {
    color: #0a7557;
    background-color:#ffffff;
}
/*------------END CONTACT PAGE----------*/

/*------------mobile responsivity----------*/

@media screen and (max-width: 768px) {
    .nav-link {
        font-size: 20px;
    }
    .details-row {
        align-items: center;
        margin-top: 0;
    }
    .address, 
    .working-hours,
    .details-img {
        margin-top: 48px;
}
    .address{
        font-size: x-large;
    }
    .address h2,
    .about-us-section h2{
        font-size: 50px;
    }
  }

@media screen and (max-width: 425px) {
    .carousel-caption h3 {
        font-size: 15px;
    }
    .card {
        margin-bottom: 15px;
    }
}

